# csgo_esp_testing

./: README.md  package.json  vite.config.ts
src/: App.tsx  Overlay.tsx  Settings.tsx  helpers.ts  main.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/csgo/: mod.rs  offsets.rs  process.rs
src-tauri/src/offsets_generator/: config.rs  mod.rs
src-tauri/src/offsets_generator/builder/: file_builder.rs  json_file_builder.rs  mod.rs
src-tauri/src/offsets_generator/dumper/: interfaces.rs  mod.rs  offsets.rs  schemas.rs
src-tauri/src/offsets_generator/sdk/: schema_class_field_data.rs  schema_class_info.rs  schema_system.rs  schema_system_type_scope.rs  schema_type.rs  schema_type_declared_class.rs  utl_ts_hash.rs
