[package]
name = "backend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31" }
winapi = { version = "0.3.9", features = ["processsnapshot", "processenv", "processthreadsapi", "libloaderapi", "winerror", "winbase", "memoryapi", "handleapi", "tlhelp32", "impl-default"] }
rand = { version = "0.8.5", features = ["std"] }
nalgebra = {version = "0.32.3" }
uuid = { version = "1.5.0", features = ["v4"] }

# Dependcies for offsets
anyhow = "1.0"
goblin = { git = "https://github.com/m4b/goblin" }
lazy_static = "1.4"
regex = "1.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[profile.release]
strip = true
